--- a/src/app/register/category/category.component.html
+++ b/src/app/register/category/category.component.html
@@ -43,7 +43,7 @@
               <ng-template kendoGridToolbarTemplate>
                   <div class="form-row" style="width: 100%; border-left: none !important;">
                       <div class="form-group col-md-8">
-                          <input type="text" style="height: 34px;" [ngClass]="search? 'active-input' : ''" class="form-control" [(ngModel)]="search" (input)="searchChange($event)" placeholder="Please enter suplier name...">
+                          <input type="text" style="height: 34px;" [ngClass]="search? 'active-input' : ''" class="form-control" [(ngModel)]="search" (input)="searchChange($event)" placeholder="{{'Category.Label.Search' | translate}} ...">
                           <div class="in_box">
                               <button type="button" style="top: 5px;" [ngClass]="search? 'btn_del' : ''" (click)="deleteTextSearch()" tabindex=-1 class="btn" tabindex=-1 tabindex=-1></button>
                           </div>
@@ -63,21 +63,6 @@
                   </div>
               </ng-template>
 
-              <kendo-grid-column width="50" class="cen" [sortable]="false" field="edit" title="{{'Common.Button.Edit' | translate}}">
-                <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex">
-                  <div class="dropdown dropdown-action">
-                    <a class="action-icon dropdown-toggle" data-toggle="dropdown"
-                        aria-expanded="false"><i class="material-icons">more_vert</i></a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" data-toggle="modal" data-target="#edit_leave"
-                            ><i class="fa fa-pencil m-r-5"></i> Edit</a>
-                        <a class="dropdown-item" data-toggle="modal" data-target="#delete_approve"
-                            ><i class="fa fa-trash-o m-r-5"></i> Delete</a>
-                    </div>
-                </div>
-              </ng-template>
-              </kendo-grid-column>
-
               <kendo-grid-checkbox-column class="cen" [width]="45" [resizable]="false" [columnMenu]="true" showSelectAll="true"></kendo-grid-checkbox-column>
 
               <kendo-grid-column width="50" class="cen" [sortable]="false" field="no" title="{{'Common.Label.No' | translate}}">
@@ -96,7 +81,6 @@
                   <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex">
                       <button class="k-button k-button-edit btn-w100px-h35px font-khmer-cursive btn-add-00 v-card-identy k-float-left" (click)="edit(dataItem)">
                           <span class="k-icon k-i-track-changes i-font"></span>
-                          <!-- <span style="margin-left: 5px;">edit</span> -->
                       </button>
                   </ng-template>
               </kendo-grid-column>
@@ -107,12 +91,14 @@
                   <kendo-grid-pdf-margin top="2cm" left="1cm" right="1cm" bottom="2cm"></kendo-grid-pdf-margin>
                   <ng-template kendoGridPDFTemplate let-pageNum="pageNum" let-totalPages="totalPages">
                       <div class="page-template">
-                          <div class="header">
-                              <div style="float: right">Page {{ pageNum }} of {{ totalPages }}</div>
+                        <div class="header">
+                          <div style="float: right">
+                            {{'Common.Label.Page'| translate: {'pageNum': pageNum, totalPages: totalPages} }}
                           </div>
-                          <div class="footer">
-                              Page {{ pageNum }} of {{ totalPages }}
-                          </div>
+                      </div>
+                      <div class="footer">
+                        {{'Common.Label.Page'| translate: {'pageNum': pageNum, totalPages: totalPages} }}
+                      </div>
                       </div>
                   </ng-template>
               </kendo-grid-pdf>
