--- a/src/app/register/product/product.component.html
+++ b/src/app/register/product/product.component.html
@@ -126,7 +126,7 @@
                         {{'Common.Button.PreView'| translate}}
                       </a>
 
-                        <a class="dropdown-item" data-toggle="modal">
+                        <a class="dropdown-item" data-toggle="modal" (click)="edit(dataItem)">
                           <i class="fa fa-pencil m-r-5"></i>
                           {{'Common.Button.Edit'| translate}}
                         </a>
