--- a/src/app/component/input/input.component.html
+++ b/src/app/component/input/input.component.html
@@ -98,6 +98,22 @@
             </div>
         </div>
 
+
+        <div class="_88ly">
+          <input aria-checked="false" class="" role="switch" type="checkbox" checked="">
+          <div class="_7q1e _79d3">
+            <div class="_79d2" style="border-radius: 12px; background-color: rgba(0, 0, 0, 0.1); border: none; box-shadow: none; height: 20px; width: 36px; max-width: 36px;"></div>
+            <span class="_7q1t" style="height: 16px; margin-left: 2px; width: 16px;"></span>
+          </div>
+        </div>
+
+        <div class="_88ly">
+          <input aria-checked="true" class="" role="switch" type="checkbox" checked="">
+          <div class="_7q1e _79d3"><div class="_79d2 _7q1f" style="border-radius: 12px; background-color: rgb(24, 119, 242); border: none; box-shadow: none; height: 20px; opacity: 0.15; width: 36px; max-width: 36px;"></div>
+             <span class="_7q1t" style="height: 20px; margin-left: 16px; width: 20px;"></span>
+          </div>
+        </div>
+
       </div>
   </div>
 </div>
@@ -175,6 +191,7 @@
           <span class="_7q1t"></span>
         </div>
       </div>
+
 
   </div>
 </div>
