--- a/src/styles.css
+++ b/src/styles.css
@@ -9531,7 +9531,7 @@ kendo-pager-page-sizes.k-pager-sizes kendo-dropdownlist {
 .contentsWrap {
   height: 100%;
   min-height: 100%;
-  max-height: 100%;
+  /* max-height: 100%; */
 }
 
 footer {
@@ -9545,4 +9545,12 @@ footer {
 
 .container01 {
   margin-bottom: 60px;
+}
+
+.container02 {
+  margin-bottom: 15px;
+  padding: 15px 24px;
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px #3f496d;
 }
