--- a/src/styles.css
+++ b/src/styles.css
@@ -9554,3 +9554,19 @@ footer {
   border-radius: 4px;
   box-shadow: 0 1px 3px #3f496d;
 }
+
+.kendo-stepper ol li a span.k-step-label{
+  /* display: block; */
+}
+
+.font-size-20px {
+  font-size: 20px !important;
+}
+
+.margin-bottom-0 {
+  margin-bottom: 0 !important;
+}
+
+.text-danger {
+  color: #dc3545!important;
+}
