--- a/src/app/register/category/category.component.html
+++ b/src/app/register/category/category.component.html
@@ -40,34 +40,11 @@
             (pageChange)="pageChange($event)"
           [height]="gridHeight"
           >
-              <ng-template kendoGridToolbarTemplate>
-                  <div class="form-row" style="width: 100%; border-left: none !important;">
-                      <div class="form-group col-md-8">
-                          <input type="text" style="height: 34px;" [ngClass]="search? 'active-input' : ''" class="form-control" [(ngModel)]="search" (input)="searchChange($event)" placeholder="{{'Category.Label.Search' | translate}} ...">
-                          <div class="in_box">
-                              <button type="button" style="top: 5px;" [ngClass]="search? 'btn_del' : ''" (click)="deleteTextSearch()" tabindex=-1 class="btn" tabindex=-1 tabindex=-1></button>
-                          </div>
-                      </div>
-
-                      <div class="form-group col-md-4">
-
-                            <button kendoGridPDFCommand class="k-button font-khmer-cursive btn-add-00 export-word float-right margin-left-10px" >
-                                <span class="font-size-15">{{'Common.Button.ExcelPDF' | translate}}</span>
-                            </button>
-
-                            <button kendoGridExcelCommand class="k-button font-khmer-cursive btn-add-00 export-word float-right" (click)="excelExportExcel(excelexport)" >
-                              <span class="font-size-15" >{{'Common.Button.ExcelExport' | translate}}</span>
-                          </button>
-
-                      </div>
-                  </div>
-              </ng-template>
-
-              <kendo-grid-checkbox-column class="cen" [width]="45" [resizable]="false" [columnMenu]="true" showSelectAll="true"></kendo-grid-checkbox-column>
+            <kendo-grid-checkbox-column class="cen" [width]="45" [resizable]="false" [columnMenu]="true" showSelectAll="true"></kendo-grid-checkbox-column>
 
               <kendo-grid-column width="50" class="cen" [sortable]="false" field="no" title="{{'Common.Label.No' | translate}}">
                   <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex">
-                      <p>{{rowIndex + 1}}</p>
+                      <span>{{rowIndex + 1}}</span>
                   </ng-template>
               </kendo-grid-column>
 
