--- a/src/app/user-management/user-add/user-add.component.html
+++ b/src/app/user-management/user-add/user-add.component.html
@@ -21,9 +21,75 @@
             <!-- <div class="content"> -->
               <!-- Step 0 -->
               <ng-container *ngIf="currentStep === 0">
+
                 <div class="form-row">
                   <div class="form-group col-md-6  margin-bottom-0">
-                      <label class="font-khmer-cursive">National ID</label>
+                      <label class="font-khmer-cursive">{{'UserAdd.Label.FirstName' | translate}}</label>
+                      <span class="text-danger"> *</span>
+                      <input type="text" [ngClass]="personalInfo.firstName" class="form-control font-khmer-cursive" [(ngModel)]="personalInfo.firstName" placeholder="{{'UserAdd.Holder.EnterFirstName' | translate}}">
+
+                      <div class="in_box">
+                          <button type="button" [ngClass]="personalInfo.firstName? 'btn_del' : ''" (click)="buttonX('productName')" tabindex=-1 class="btn" tabindex=-1 tabindex=-1></button>
+                      </div>
+                  </div>
+                  <div class="form-group col-md-6 margin-bottom-0">
+                      <label class="font-khmer-cursive">{{'UserAdd.Label.LastName' | translate}}</label>
+                      <span class="text-danger"> *</span>
+                      <input type="text" [ngClass]="personalInfo.lastName" class="form-control font-khmer-cursive" [(ngModel)]="personalInfo.lastName" placeholder="{{'UserAdd.Holder.EnterLastName' | translate}}">
+
+                      <div class="in_box">
+                          <button type="button" [ngClass]="personalInfo.lastName? 'btn_del' : ''" (click)="buttonX('productName')" tabindex=-1 class="btn" tabindex=-1 tabindex=-1></button>
+                      </div>
+                  </div>
+                </div>
+
+                <div class="form-row">
+                  <div class="form-group col-md-6  margin-bottom-15px">
+                      <label class="font-khmer-cursive">{{'UserAdd.Label.Gender' | translate}}</label>
+                      <span class="text-danger"> *</span>
+                      <kendo-dropdownlist [ngClass] = "{'active-input' : maritalStatus}" [data]="genders" [filterable]="false" [textField]="'name'" [valueField]="'id'" [kendoDropDownFilter]="filterSettings" [popupSettings]="{ popupClass: 'search_filter_pop' }" [(ngModel)]="maritalStatus" [ngModelOptions]="{standalone:
+                        true}" [defaultItem]="defaultGender">
+                            <ng-template kendoDropDownListValueTemplate let-dataItem>
+                                <span class="template font-khmer-cursive">{{ dataItem.text}}</span>
+                            </ng-template>
+                            <ng-template kendoDropDownListItemTemplate let-dataItem>
+                                <span class="template font-khmer-cursive">{{ dataItem.text}}</span>
+                            </ng-template>
+                        </kendo-dropdownlist>
+                  </div>
+                  <div class="form-group col-md-6 margin-bottom-15px">
+                      <label class="font-khmer-cursive">{{'UserAdd.Label.BirthDate' | translate}}</label>
+                      <span class="text-danger"> *</span>
+                      <kendo-datepicker [format]="'dd/MM/yyyy'" [topView]="'year'" [navigation]="false" [(value)]="birthDate"></kendo-datepicker>
+                  </div>
+                </div>
+
+
+                <div class="form-row">
+                  <div class="form-group col-md-6  margin-bottom-0">
+                      <label class="font-khmer-cursive">{{'UserAdd.Label.Phone' | translate}}</label>
+                      <span class="text-danger"> *</span>
+                      <input type="text" [ngClass]="personalInfo.phone" class="form-control font-khmer-cursive" [(ngModel)]="personalInfo.phone" placeholder="{{'Product.Holder.EnterProductName' | translate}}">
+
+                      <div class="in_box">
+                          <button type="button" [ngClass]="personalInfo.phone? 'btn_del' : ''" (click)="buttonX('productName')" tabindex=-1 class="btn" tabindex=-1 tabindex=-1></button>
+                      </div>
+                  </div>
+                  <div class="form-group col-md-6 margin-bottom-0">
+                      <label class="font-khmer-cursive">{{'UserAdd.Label.Email' | translate}}</label>
+                      <span class="text-danger"> *</span>
+                      <input type="text" [ngClass]="personalInfo.email" class="form-control font-khmer-cursive" [(ngModel)]="personalInfo.email" placeholder="{{'Product.Holder.EnterProductName' | translate}}">
+
+                      <div class="in_box">
+                          <button type="button" [ngClass]="personalInfo.email? 'btn_del' : ''" (click)="buttonX('productName')" tabindex=-1 class="btn" tabindex=-1 tabindex=-1></button>
+                      </div>
+                  </div>
+                </div>
+
+
+                <div class="form-row">
+                  <div class="form-group col-md-6  margin-bottom-0">
+                      <label class="font-khmer-cursive">{{'UserAdd.Label.NationalID' | translate}}</label>
                       <span class="text-danger"> *</span>
                       <input type="text" [ngClass]="productName? 'active-input' : ''" class="form-control font-khmer-cursive" [(ngModel)]="productName" placeholder="{{'Product.Holder.EnterProductName' | translate}}">
 
@@ -32,20 +98,19 @@
                       </div>
                   </div>
                   <div class="form-group col-md-6 margin-bottom-0">
-                      <label class="font-khmer-cursive">Nationality</label>
+                      <label class="font-khmer-cursive">{{'UserAdd.Label.Nationality' | translate}}</label>
                       <span class="text-danger"> *</span>
                       <input type="text" [ngClass]="productName? 'active-input' : ''" class="form-control font-khmer-cursive" [(ngModel)]="productName" placeholder="{{'Product.Holder.EnterProductName' | translate}}">
 
                       <div class="in_box">
                           <button type="button" [ngClass]="productName? 'btn_del' : ''" (click)="buttonX('productName')" tabindex=-1 class="btn" tabindex=-1 tabindex=-1></button>
                       </div>
-
                   </div>
                 </div>
 
                 <div class="form-row ">
                   <div class="form-group col-md-6 margin-bottom-0">
-                      <label class="font-khmer-cursive">Religion</label>
+                      <label class="font-khmer-cursive">{{'UserAdd.Label.Religion' | translate}}</label>
                       <span class="text-danger"> *</span>
                       <input type="text" [ngClass]="productName? 'active-input' : ''" class="form-control font-khmer-cursive" [(ngModel)]="productName" placeholder="{{'Product.Holder.EnterProductName' | translate}}">
 
@@ -54,10 +119,10 @@
                       </div>
                   </div>
                   <div class="form-group col-md-6 margin-bottom-0">
-                      <label class="font-khmer-cursive">Marital status</label>
+                      <label class="font-khmer-cursive">{{'UserAdd.Label.MaritalStatus' | translate}}</label>
                       <span class="text-danger"> *</span>
-                      <kendo-dropdownlist [ngClass] = "{'active-input' : maritalStatus}" [data]="maritalStatusList" [filterable]="true" [textField]="'name'" [valueField]="'id'" [kendoDropDownFilter]="filterSettings" [popupSettings]="{ popupClass: 'search_filter_pop' }" [(ngModel)]="maritalStatus" [ngModelOptions]="{standalone:
-                        true}" [defaultItem]="defaultCountry">
+                      <kendo-dropdownlist [ngClass] = "{'active-input' : maritalStatus}" [data]="maritalStatusList" [filterable]="false" [textField]="'name'" [valueField]="'id'" [kendoDropDownFilter]="filterSettings" [popupSettings]="{ popupClass: 'search_filter_pop' }" [(ngModel)]="maritalStatus" [ngModelOptions]="{standalone:
+                        true}" [defaultItem]="defaultMaritalStatus">
                             <ng-template kendoDropDownListValueTemplate let-dataItem>
                                 <span class="template font-khmer-cursive">{{ dataItem.text}}</span>
                             </ng-template>
