--- a/src/app/user-management/user/user.component.html
+++ b/src/app/user-management/user/user.component.html
@@ -129,6 +129,11 @@
                 <span class="margin-left-5px">{{'Common.Button.New' | translate}}</span>
             </button>
 
+            <button class="k-button btn-w100px-h35px font-khmer-cursive btn-add-00" (click)="addUser()">
+              <span class="k-icon k-i-plus-circle "></span>
+              <span class="margin-left-5px">{{'Common.Button.New' | translate}}</span>
+          </button>
+
         </div>
 
       </div>
